test/spec_vectors/memory_copy64/ok/module_4.wat
(module (memory (export "memory0") i64 1 1) (data (i64.const 2) "") (data (i64.const 12) "") (func (export "test") (memory.copy (i64.const 20) (i64.const 22) (i64.const 4))) (func (export "load8_u") (param i64) (result i32) (i32.load8_u (local.get 0))))