test/spec_vectors/memory_copy64/fail/module_82.wat
(module (memory i64 1 1) (func (export "testfn") (memory.copy (f64.const 10) (f64.const 20) (f64.const 30))))